# audiobooks

./: .dockerignore  .gitignore  Dockerfile  README.md  agentic_app_design.md  agentic_app_design_claude.md  ai_agent_book_instruction.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: __init__.py  main.py
app/core/: atomic_ops.py  config.py  logging.py
app/services/: __init__.py  cleaner.py  extraction_strategies.py  merger.py  scraper.py  tts.py
app/storage/: __init__.py  storage_ops.py
scripts/: setup_project.sh
terraform/: main.tf  outputs.tf  terraform.tfvars
tests/: test_extraction_strategies.py  test_storage.py
