[project]
name = "audiobook-pipeline"
version = "0.1.0"
description = "Agentic Book-to-Audio Pipeline for militera.lib.ru"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Audiobook Pipeline Team"}
]
keywords = ["audiobook", "tts", "text-to-speech", "scraping"]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "google-cloud-texttospeech>=2.14.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
audiobook-pipeline = "app.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
